--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
   <section>
     <h2>Things I Like</h2>
     <ul>
-      <li>Fill</li>
-      <li>This</li>
-      <li>In</li>
+      <li>Food/li>
+      <li>Summer</li>
+      <li>Dancing </li>
     </ul>
   </section>
 
   <section>
     <h2>Things I Don't Like</h2>
     <ul>
-      <li>Fill</li>
-      <li>This</li>
-      <li>In</li>
+      <li>Winter</li>
+      <li>racists</li>
+      <li>global warming</li>
     </ul>
   </section>
 </body>
